--- a/pom.xml
+++ b/pom.xml
@@ -55,7 +55,7 @@
     </profiles>
 
     <build>
-        <finalName>spring-test-mvc-configuration</finalName>
+        <finalName>english_exam</finalName>
         <filters>
             <filter>profiles/${build.profile.id}/config.properties</filter>
         </filters>
