--- a/profiles/integration-test/config.properties
+++ b/profiles/integration-test/config.properties
@@ -4,6 +4,15 @@ db.url=jdbc:h2:mem:datajpa
 db.username=sa
 db.password=
 
+#BoneCP Configuration
+bonecp.idle_connection_test_period_in_minutes=60
+bonecp.partition_count=3
+bonecp.acquire_increment=5
+bonecp.max_connections_per_partition=50
+bonecp.min_connections_per_partition=10
+bonecp.statements_cache_size=100
+bonecp.release_helper_threads=3
+
 #Hibernate Configuration
 hibernate.dialect=org.hibernate.dialect.H2Dialect
 #hibernate.dialect=org.hibernate.dialect.MySQLDialect
